# waygate-server

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  announcements.toml  compose.yaml  compose.yml  config.toml  docker-entrypoint.sh  logging.toml  logging.yml  steam_appid.txt
.github/workflows/: rust.yml
config/: announcement.toml  announcement.yml  ban_announcement.yml  logging.yaml  logging.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: auth.rs  ban.rs  lib.rs  notify.rs  pagination.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/connection/: Cargo.toml
crates/connection/src/: client.rs  crypto.rs  lib.rs  push.rs  session.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20240711184420_add_group_password_tables.sql  20240905233148_create_ugc_table.sql
crates/database/src/: lib.rs
crates/fnrpc/: Cargo.toml
crates/generate-keys/: Cargo.toml
crates/message/: Cargo.toml
crates/message/src/: armoredcore6.rs  bloodmessage.rs  bloodstain.rs  breakin.rs  lib.rs  log.rs  player.rs  push.rs  quickmatch.rs  request.rs  response.rs  room.rs  session.rs  shared.rs  sign.rs
crates/message/src/armoredcore6/: player.rs  rating.rs  request.rs  response.rs  room.rs  session.rs  ugc.rs
crates/pool/: Cargo.toml
crates/pool/src/: breakin.rs  lib.rs  quickmatch.rs  sign.rs
crates/pool/src/armoredcore6/: room.rs
crates/pool/src/matching/: area.rs  mod.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: announcement.rs  armoredcore6.rs  bloodmessage.rs  bloodstain.rs  breakin.rs  character.rs  ghostdata.rs  handler.rs  lib.rs  matchingticket.rs  player.rs  player_equipments.rs  quickmatch.rs  room.rs  session.rs  sign.rs  ugc.rs
crates/rpc/src/armoredcore6/: announcement.rs  character.rs  handler.rs  matchingticket.rs  player.rs  room.rs  session.rs  ugc.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/session/: Cargo.toml
crates/session/src/: ban.rs  lib.rs
crates/steam/: Cargo.toml
crates/steam/src/: lib.rs
crates/wire/: Cargo.toml
docs/imhex/: Bloodstain.hexpat  GhostData.hexpat  Message.hexpat  PcInfo.hexpat  ReplayData.hexpat
docs/imhex/includes/: params.hexpat  rpc.hexpat  util.hexpat
docs/imhex/includes/params/: AcceptQuickMatch.hexpat  AllowBreakInTarget.hexpat  BreakInTarget.hexpat  CreateBloodMessage.hexpat  CreateBloodstain.hexpat  CreateGhostData.hexpat  CreateMatchAreaSign.hexpat  CreateMatchingTicket.hexpat  CreateSession.hexpat  CreateSign.hexpat  DeleteSession.hexpat  EvaluateBloodMessage.hexpat  GRGetPlayerEquipments.hexpat  GRUploadPlayerEquipments.hexpat  GetAnnounceMessageList.hexpat  GetBloodMessageList.hexpat  GetBloodstainList.hexpat  GetBreakInTargetList.hexpat  GetDeadingGhost.hexpat  GetGhostDataList.hexpat  GetItemLog.hexpat  GetMatchAreaSignList.hexpat  GetMatchDensity.hexpat  GetSignList.hexpat  GetVisitorList.hexpat  JoinMultiplay.hexpat  JoinQuickMatch.hexpat  KillEnemyLog.hexpat  ReentryBloodMessage.hexpat  RegisterQuickMatch.hexpat  RegisterUGC.hexpat  RejectSign.hexpat  RemoveBloodMessage.hexpat  RemoveSign.hexpat  RestoreSession.hexpat  SearchQuickMatch.hexpat  SummonSign.hexpat  UnregisterQuickMatch.hexpat  UpdateLoginPlayerCharacter.hexpat  UpdatePlayerStatus.hexpat  (+5 more)
fnrpc/: Cargo.toml
fnrpc/src/: lib.rs  push.rs  request.rs  response.rs
fnrpc/src/params/: bloodmessage.rs  bloodstain.rs  breakin.rs  character.rs  ghostdata.rs  matchingticket.rs  mod.rs  player.rs  player_equipments.rs  quickmatch.rs  session.rs  shared.rs  sign.rs  visit.rs
fnrpc/src/wire/: mod.rs  ser.rs
generate-keys/: Cargo.toml
generate-keys/src/: main.rs
message/: Cargo.toml
message/src/: builder.rs  eldenring.rs  lib.rs  reader.rs  session.rs
message/src/eldenring/: announcement.rs  bloodmessage.rs  bloodstain.rs  breakin.rs  ghostdata.rs  log.rs  match_density.rs  matchingticket.rs  payload.rs  player.rs  player_equipments.rs  push.rs  quickmatch.rs  request.rs  response.rs  room.rs  session.rs  shared.rs  sign.rs  ugc.rs  visit.rs
migrations/: 20240415035749_create_initial_tables.sql
server/: Cargo.toml
server/keys/: client_public_key  server_secret_key
server/migrations/: 20240415035749_create_initial_tables.sql  20240711184420_add_group_password_tables.sql  20240713124708_create_player_equipments_table.sql  20240817234223_create_bans_table.sql  20250211072250_upgrade_primary_keys.sql  20250501120659_update_bans_table.sql  20251129212143_Add_indexes_and_precomputed_random.sql
server/src/: api.rs  bans.rs  config.rs  database.rs  handler.rs  logging.rs  main.rs  notification.rs  protocol.rs  push.rs  services.rs  session.rs  steam.rs  util.rs
server/src/api/: auth.rs  ban.rs  health.rs  key.rs  notification.rs  notify.rs
server/src/client/: connection.rs  crypto.rs  key.rs  mod.rs  sodium.rs  transport.rs
server/src/config/: announcement.rs  mod.rs  play_region.rs
server/src/handler/: eldenring.rs
server/src/handler/eldenring/: announcement.rs  bloodmessage.rs  bloodstain.rs  breakin.rs  ghostdata.rs  match_density.rs  matchingticket.rs  player.rs  player_equipments.rs  quickmatch.rs  sign.rs  visit.rs
server/src/pool/: breakin.rs  key.rs  mod.rs  pool.rs  quickmatch.rs  sign.rs
server/src/pool/matching/: area.rs  weapon.rs
server/src/protocol/: crypto.rs
server/src/rpc/: announcement.rs  bloodmessage.rs  bloodstain.rs  breakin.rs  character.rs  ghostdata.rs  handler.rs  matchingticket.rs  message.rs  mod.rs  player.rs  player_equipments.rs  quickmatch.rs  session.rs  sign.rs  ugc.rs
server/src/rpc/message/: announcement.rs  breakin.rs  ghostdata.rs  matchingticket.rs  player.rs  player_equipments.rs  quickmatch.rs  response.rs  session.rs  sign.rs  ugc.rs  visit.rs
server/src/services/: eldenring.rs
server/src/services/eldenring/: area.rs  breakin.rs  quickmatch.rs  sign.rs  visit.rs  weapon.rs
wire/: Cargo.toml
wire/src/: lib.rs
wire/src/wire/: de.rs  mod.rs  ser.rs  string.rs
