[workspace]
members = [
    "crates/server",
    "crates/generate-keys",
    "crates/wire",
    "crates/pool",
    "crates/message",
    "crates/database",
    "crates/api",
    "crates/steam",
    "crates/config",
    "crates/connection",
    "crates/rpc",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[workspace.dependencies]
thiserror = "1.0"
rand = "0.8"
base64 = "0.22"
tracing = "0.1"
byteorder = "1"

[workspace.dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[workspace.dependencies.sqlx]
version = "0.7"
features = [
    "postgres",
    "migrate",
    "runtime-tokio",
    "macros",
]

[workspace.dependencies.clap]
version = "4"
features = [
    "derive",
    "env",
]

[workspace.dependencies.tokio]
version = "1"
features = [
    "full",
]

[workspace.dependencies.tungstenite]
version = "0.20"
features = [
    "rustls",
]

[workspace.dependencies.tokio-tungstenite]
version = "0.20"
features = [
    "rustls-tls-native-roots",
]

[workspace.dependencies.libsodium-sys-stable]
version = "1"
features = [
    "fetch-latest",
]

[workspace.dependencies.waygate-server]
path = "crates/server"

[workspace.dependencies.waygate-generate-keys]
path = "crates/generate-keys"

[workspace.dependencies.waygate-pool]
path = "crates/pool"

[workspace.dependencies.waygate-wire]
path = "crates/wire"

[workspace.dependencies.waygate-message]
path = "crates/message"

[workspace.dependencies.waygate-database]
path = "crates/database"

[workspace.dependencies.waygate-api]
path = "crates/api"

[workspace.dependencies.waygate-steam]
path = "crates/steam"

[workspace.dependencies.waygate-config]
path = "crates/config"

[workspace.dependencies.waygate-connection]
path = "crates/connection"

[workspace.dependencies.waygate-rpc]
path = "crates/rpc"
