[workspace]
members = [
    "server/",
    "wire/",
    "message/",
    "generate-keys/",
]

[workspace.dependencies]
thiserror = "1"
message = { path = "message/" }
wire = { path = "wire/" }

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
