[package]
name = "waygate-server"
version = "0.1.1"
edition = "2021"

[dependencies]
url = "2"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
futures-channel = "0.3"
thiserror = "1"
byteorder = "1"
toml = "0.8"
newtype = "0.2"
base64 = "0.22"

[dependencies.log]
version = "0.4"
features = [
    "kv",
]

[dependencies.log4rs]
version = "1"
features = [
    "toml_format",
]

[dependencies.libsodium-sys-stable]
version = "1"
features = [
    "fetch-latest",
]

[dependencies.sqlx]
version = "0.7"
features = [
    "postgres",
    "migrate",
    "runtime-tokio",
    "macros",
]

[dependencies.serde]
workspace = true

[dependencies.futures-util]
version = "0.3"
features = [
    "sink",
]

[dependencies.tungstenite]
version = "0.20"
features = [
    "rustls",
]

[dependencies.tokio-tungstenite]
version = "0.20"
features = [
    "rustls-tls-native-roots",
]

[dependencies.tokio]
version = "1"
features = [
    "full",
]

[dependencies.fnrpc]
path = "../fnrpc"

[dependencies.steamworks]
git = "https://github.com/vswarte/steamworks-rs"
