[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive", "env"]

[dependencies.sqlx]
version = "0.8"
features = [
    "postgres",
    "migrate",
    "runtime-tokio",
    "macros",
]

[dependencies]
log = "0.4"
log4rs = "1.3"
tokio-tungstenite = "*"
futures-util = "0.3"
thiserror.workspace = true
message.workspace = true
wire.workspace = true
base64 = "0.22"
libsodium-sys = "0.2"
rand = "0.9"
steamworks = "0.11"

[features]
packet-dump = []
