[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive", "env"]

[dependencies.sqlx]
version = "0.8"
features = [
    "postgres",
    "migrate",
    "runtime-tokio",
    "macros",
]

[dependencies.log]
version = "0.4"
features = ["kv", "kv_serde"]

[dependencies.log4rs]
version = "1.4.0"
features = ["log_kv"]

[patch.crates-io]
# https://github.com/estk/log4rs/pull/426
log4rs = { git = "https://github.com/estk/log4rs.git", revision = "7355a368b755681bac9020c5373bb34a7eac471d"}


[dependencies]
tokio-tungstenite = "*"
futures-util = "0.3"
thiserror.workspace = true
message.workspace = true
wire.workspace = true
base64 = "0.22"
libsodium-sys = "0.2"
rand = "0.9"
steamworks = "0.11"
serde = "1.0"
serde_yaml = "0.9"
actix-web = "4"
dashmap = "6"

[features]
packet-dump = []
