[package]
name = "waygate-server"
version = "0.1.1"
edition = "2021"

[dependencies]
url = "2"
async-trait = "0.1"
newtype = "0.2"

[dependencies.log4rs]
version = "1"
features = [
    "toml_format",
]

[dependencies.tracing]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.byteorder]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tungstenite]
workspace = true

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.waygate-wire]
workspace = true

[dependencies.waygate-message]
workspace = true

[dependencies.waygate-pool]
workspace = true

[dependencies.waygate-database]
workspace = true

[dependencies.waygate-api]
workspace = true

[dependencies.waygate-steam]
workspace = true

[dependencies.waygate-config]
workspace = true

[dependencies.waygate-connection]
workspace = true

[dependencies.waygate-rpc]
workspace = true
